@@ -68,6 +68,7 @@
 #define MKV_V_THEORA      "V_THEORA"
 #define MKV_V_DIRAC       "V_DIRAC"
 #define MKV_V_VP8         "V_VP8"
+#define MKV_V_VP9         "V_VP9"
 
 #define MKV_S_TEXTUTF8   "S_TEXT/UTF8"
 #define MKV_S_TEXTSSA    "S_TEXT/SSA"
