@@ -16,6 +16,7 @@
 
 #include "common/common_pch.h"
 
+#include "common/ivf.h"
 #include "common/mm_io.h"
 #include "merge/pr_generic.h"
 
@@ -23,13 +24,14 @@ class ivf_reader_c: public generic_reader_c {
 private:
   uint16_t m_width, m_height;
   uint64_t m_frame_rate_num, m_frame_rate_den;
+  ivf::codec_e m_codec;
 
 public:
   ivf_reader_c(const track_info_c &ti, const mm_io_cptr &in);
   virtual ~ivf_reader_c();
 
   virtual translatable_string_c get_format_name() const {
-    return YT("IVF (VP8)");
+    return YT("IVF (VP8/VP9)");
   }
 
   virtual void read_headers();
